# rusty-files

./: .dockerignore  .gitignore  API.md  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  RELEASE.md  docker-compose.yml
.github/workflows/: release.yml
benches/: indexing.rs  searching.rs
config/: default.toml  production.toml
examples/: async_indexing.rs  basic_search.rs  custom_config.rs
src/: lib.rs
src/cli/: commands.rs  interactive.rs  main.rs  mod.rs  output.rs
src/core/: config.rs  engine.rs  error.rs  mod.rs  types.rs
src/filters/: date.rs  exclusion.rs  extension.rs  mod.rs  size.rs
src/indexer/: builder.rs  content.rs  incremental.rs  metadata.rs  mod.rs  walker.rs
src/search/: executor.rs  fuzzy.rs  matcher.rs  mod.rs  query.rs  ranker.rs
src/server/: api.rs  config.rs  main.rs  mod.rs  models.rs  state.rs  websocket.rs
src/storage/: bloom.rs  cache.rs  database.rs  migrations.rs  mod.rs  schema.rs
src/utils/: encoding.rs  hash.rs  mime.rs  mod.rs  path.rs
src/watcher/: debouncer.rs  mod.rs  monitor.rs  synchronizer.rs
