[package]
name = "rusty-files"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["Rusty Files Contributors"]
description = "A high-performance, cross-platform file search engine library"
license = "MIT"
repository = "https://github.com/Aryagorjipour/rusty-files"
keywords = ["search", "files", "indexing", "filesystem"]
categories = ["filesystem", "database"]

[lib]
name = "rusty_files"
path = "src/lib.rs"

[[bin]]
name = "filesearch"
path = "src/cli/main.rs"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

rusqlite = { version = "0.30", features = ["bundled", "backup", "blob"] }
r2d2 = "0.8"
r2d2_sqlite = "0.23"

walkdir = "2.4"
ignore = "0.4"
notify = "6.1"
dunce = "1.0"
pathdiff = "0.2"

regex = "1.10"
globset = "0.4"
aho-corasick = "1.1"
fuzzy-matcher = "0.3"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

clap = { version = "4.4", features = ["derive", "cargo"] }
indicatif = "0.17"
colored = "2.1"
crossterm = "0.27"

anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
once_cell = "1.19"
parking_lot = "0.12"
rayon = "1.8"
dashmap = "5.5"
bytes = "1.5"
memmap2 = "0.9"

encoding_rs = "0.8"
chardetng = "0.1"
mime_guess = "2.0"
sha2 = "0.10"

probabilistic-collections = "0.7"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.8"
proptest = "1.4"

[[bench]]
name = "indexing"
harness = false

[[bench]]
name = "searching"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
